--- a/index.html
+++ b/index.html
@@ -18,8 +18,12 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>EMNEGE</strong>
-									<!-- <img src="assets\logo\logo.svg" alt="Логотип EMNEGE"></a> -->
+									<a href="index.html" class="logo"><strong>EMNEGE</strong></a>
+									<a class="dark-mode-button" href="#">
+										<svg xmlns="http://www.w3.org/2000/svg">
+											<path fill="#3d4449" fill-rule="nonzero" d="M9.988 4.224a8.246 8.246 0 00-3.981 1.114c2.346 1.302 3.895 3.771 3.845 6.64-.05 2.87-1.687 5.395-4.08 6.777a7.84 7.84 0 003.944.98c4.375-.076 7.986-3.61 8.06-7.892.076-4.28-3.414-7.694-7.788-7.62z" transform="rotate(29 11.775 11.979)"></path>
+										</svg>
+									</a>
 									<ul class="icons">
 										<li><a href="https://t.me/emnege" target="_blank" class="icon brands fa-telegram"><span class="label">Telegram</span></a></li>
 										<li><a href="https://www.tiktok.com/@emnegeee?_t=8k280IxykVt&_r=1" target="_blank" class="icon brands fa-tiktok"><span class="label">Tik-Tok</span></a></li>
@@ -31,16 +35,19 @@
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h1>Какое наследие Жусуп Абдрахманов оставил <br />
-											Кыргызстану?</h1>
+											<h1>Почему 8 марта не праздник «красоты и нежности»?</h1>
 										</header>
-										<p>Он родился 28 декабря 1901 года. В свои 18 лет Абдрахманов был избран членом райкома. А с 19 до 25 лет занимал высокие государственные должности. По инициативе Абдрахманова и его соратников в 1924 г.  была образована Кара-Кыргызская автономная область и были оканчательно определены границы современного Кыргызстана.</p>
+										<p>
+											История женского праздника началась в начале 20-х годов в Нью-Йорке с забастовок и массовых протестов женщин за равные права с мужчинами в условиях труда. 
+											Свыше 15 тыс. тружениц требовали улучшений условий труда, повышения зарплаты, сокращения рабочего дня и предоставления права голосовать. 
+											Подтверждением справедливости требований работниц стали случаи, когда женщины недоедали или умирали от переработок.
+										</p>
 										<ul class="actions">
-											<li><a href="post_1.html" class="button big">Читать дальше</a></li>
+											<li><a href="post_4.html" class="button big">Читать дальше</a></li>
 										</ul>
 									</div>
 									<span class="image object">
-										<img src="images\abdrahmanov.jpg" alt="" />
+										<img src="images/pic01.jpg" alt="image" />
 									</span>
 								</section>
 
@@ -50,28 +57,87 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="images\abdrahmanov.jpg" alt="" /></a>
-											<h3>Какое наследие Жусуп Абдрахманов оставил Кыргызстану? </h3>
-											<p>Он родился 28 декабря 1901 года. В свои 18 лет Абдрахманов был избран членом райкома. А с 19 до 25 лет занимал высокие государственные должности</p>
-											<ul class="actions">
-												<li><a href="post_1.html" class="button">Чатать</a></li>
-											</ul>
+											<a href="post_1.html" class="image">
+												<img src="images\abdrahmanov.jpg" alt="" />
+											</a>
+											<div class="card_content">
+												<h3>Какое наследие Жусуп Абдрахманов оставил Кыргызстану?</h3>
+												<p>
+													Он родился 28 декабря 1901 года. В свои 18 лет Абдрахманов был избран членом райкома. А с 19 до 25 лет занимал высокие государственные должности.
+												</p>
+												<ul class="actions">
+													<li>
+														<a href="post_1.html" class="button">Чатать</a>
+													</li>
+												</ul>
+											</div>
 										</article>
 										<article>
-											<a href="post_2.html" class="image"><img src="images\esig.jpg" alt="" /></a>
-											<h3>Опасный рост популярности “Электронных сигарет”</h3>
-											<p>Опасный рост популярности “Электронных сигарет”. Популярность электронных сигарет стремительно растет по всему миру</p>
-											<ul class="actions">
-												<li><a href="post_2.html" class="button">Читать</a></li>
-											</ul>
+											<a href="post_2.html" class="image">
+												<img src="images\esig.jpg" alt="" />
+											</a>
+											<div class="card_content">
+												<h3>Опасный рост популярности “Электронных сигарет”</h3>
+												<p>
+													Опасный рост популярности “Электронных сигарет”. Популярность электронных сигарет стремительно растет по всему миру.
+												</p>
+												<ul class="actions">
+													<li>
+														<a href="post_2.html" class="button">Читать</a>
+													</li>
+												</ul>
+											</div>
 										</article>
 										<article>
-											<a href="post_3.html" class="image"><img src="images/pic03.jpg" alt="" /></a>
-											<h3>Почему важно  говорить о фемициде в Кыргызстане ?</h3>
-											<p>Произошедшие громкие события связанные с физическим, сексуальным и домашним насилием, в отношении женщин стали обыденными вещами в нашем информационном поле</p>
-											<ul class="actions">
-												<li><a href="post_3.html" class="button">Читать</a></li>
-											</ul>
+											<a href="post_3.html" class="image">
+												<img src="images/pic03.jpg" alt="" />
+											</a>
+											<div class="card_content">
+												<h3>Почему важно  говорить о фемициде в Кыргызстане?</h3>
+												<p>
+													Произошедшие громкие события связанные с физическим, сексуальным и домашним насилием, в отношении женщин стали обыденными вещами в нашем информационном поле
+												</p>
+												<ul class="actions">
+													<li>
+														<a href="post_3.html" class="button">Читать</a>
+													</li>
+												</ul>
+											</div>
+										</article>
+										<article>
+											<a href="post_4.html" class="image">
+												<img src="images/pic01.jpg" alt="" />
+											</a>
+											<div class="card_content">
+												<h3>Почему 8 марта не праздник «красоты и нежности»?</h3>
+												<p>
+													История женского праздника началась в начале 20-х годов в Нью-Йорке с забастовок и массовых протестов женщин за равные права с мужчинами в условиях труда. 
+													Свыше 15 тыс. тружениц требовали улучшений условий труда, повышения зарплаты, сокращения рабочего дня и предоставления права голосовать. 
+													Подтверждением справедливости требований работниц стали случаи, когда женщины недоедали или умирали от переработок.
+												</p>
+												<ul class="actions">
+													<li>
+														<a href="post_4.html" class="button">Читать</a>
+													</li>
+												</ul>
+											</div>
+										</article>
+										<article>
+											<a href="post_5.html" class="image">
+												<img src="images/pic02.jpg" alt="" />
+											</a>
+											<div class="card_content">
+												<h3>История зарождения праздника влюбленных</h3>
+												<p>
+													14 февраля Кыргызстан и ряд других стран отмечают День всех влюбленных. 
+                                                    Это не официальный  и не религиозный праздник. Но его отмечают с большим размахом.
+												</p>
+												<ul class="actions">
+													<li>
+														<a href="post_5.html" class="button">Читать</a>
+													</li>
+												</ul>
+											</div>
 										</article>
 										<!-- <article>
 											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
@@ -121,36 +187,16 @@
 									</header>
 									<ul>
 										<li><a href="index.html">Главная</a></li>
-										<li><a href="#">Хз че то придумайте</a></li>
-										<li><a href="#">Хз че то придумайте</a></li>
-										<li><a href="#">Хз че то придумайте</a></li>
-										<li><a href="#">Хз че то придумайте</a></li>
+										<li><a href="#">Культура</a></li>
+										<li><a href="#">Полезное и развлекательное</a></li>
+										<li>
+											<span class="opener">Медиаграмотность</span>
+											<ul>
+												<li><a href="#">Статьи</a></li>
+												<li><a href="#">Анкетирование</a></li>
+											</ul>
+										</li>
 										<li><a href="#">О нас</a></li>
-										<!-- <li><a href="generic.html">Generic</a></li>
-										<li><a href="elements.html">Elements</a></li>
-										<li>
-											<span class="opener">Submenu</span>
-											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
-												<li><a href="#">Ipsum Adipiscing</a></li>
-												<li><a href="#">Tempus Magna</a></li>
-												<li><a href="#">Feugiat Veroeros</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Etiam Dolore</a></li>
-										<li><a href="#">Adipiscing</a></li>
-										<li>
-											<span class="opener">Another Submenu</span>
-											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
-												<li><a href="#">Ipsum Adipiscing</a></li>
-												<li><a href="#">Tempus Magna</a></li>
-												<li><a href="#">Feugiat Veroeros</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Maximus Erat</a></li>
-										<li><a href="#">Sapien Mauris</a></li>
-										<li><a href="#">Amet Lacinia</a></li> -->
 									</ul>
 								</nav>
 							<!-- Footer -->
