--- a/post_5.html
+++ b/post_5.html
@@ -35,40 +35,30 @@
 									<div class="post_container">
 										<div class="post_content">
 											<header class="main">
-												<h1>Какое наследие Жусуп Абдрахманов оставил Кыргызстану?</h1>
+												<h1>История зарождения праздника влюбленных</h1>
 											</header>
 		
 											<div class="image main">
-												<img src="images\abdrahmanov.jpg" alt="image"/>
+												<img src="images\pic02.jpg" alt="image"/>
 											</div>
 
 											<div class="post_body">
 												<p>
 													<br>
-													Он родился 28 декабря 1901 года.
+													14 февраля Кыргызстан и ряд других стран отмечают День всех влюбленных. 
+                                                    Это не официальный  и не религиозный праздник. Но его отмечают с большим размахом.
 													<br>
 													<br>
-													В свои 18 лет Абдрахманов был избран членом райкома. А с 19 до 25 лет занимал высокие государственные должности.
+													История:
 													<br>
 													<br>
-													По инициативе Абдрахманова и его соратников в 1924 г. была образована Кара-Кыргызская автономная область и были 
-													оканчательно определены границы современного Кыргызстана.
+													По легенде 14 февраля был казнен христианский священник Валентин, покровитель влюбленных, тайно венчавший пары в языческом Риме. 
+                                                    Однако существует и другие легенды о происхождении этого праздника, так как о данном мученике нет никаких точных сведений.
 													<br>
 													<br>
-													За шесть лет его пребывания на посту председателя были построены первые промышленные предприятия, транспорт, школы, 
-													железная дорога, водное хозяйство и многие другие объекты.
-													<br>
-													<br>
-													Несмотря на все риски, он спас свой народ,и  беженцев из Казахстана и Украины от голодомора в 1932-1933 ие года.
-													<br>
-													<br>
-													Также интересный факт -  в своем дневнике он писал, о дружбе , с Маяковским, Ахматовой и другими деятелями культуры и искусства.
-													<br>
-													<br>
-													Абдрахманов 1938-году в возрасте 36 лет необоснованно обвинен в госизмене и был расстрелян. Посмертно реабилитирован в 1958-м.
-													<br>
-													<br>
-													Жизнь Ж. Абдрахманова была интересной, а конец печальным, но несмотря на это он оставил великое наследие для Кыргызстана.
+													В Кыргызстане этот праздник является светским и отмечается примерно с конца 90-х годов. 
+                                                    Не смотря на все споры вокруг этого праздника, сегодня День всех влюбленных в нашей стране празднуют широко и с размахом.
+                                                    Особенно бурно данный праздник отмечают среди молодежи.
 												</p>
 											</div>
 										</div>
